--- a/Pipfile
+++ b/Pipfile
@@ -5,6 +5,11 @@ name = "pypi"
 
 [packages]
 shapely = "==1.8.0"
+requests = "==2.26.0"
+pandas = "==1.3.5"
+psycopg2-binary = "==2.9.3"
+sqlalchemy = "==1.4.29"
+geoalchemy2 = "==0.10.0"
 
 [dev-packages]
 ipykernel = "6.5.0"
