--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,8 @@ pandas = "==1.3.5"
 psycopg2-binary = "==2.9.3"
 sqlalchemy = "==1.4.29"
 geoalchemy2 = "==0.10.0"
+click = "==8.0.3"
+tqdm = "==4.62.3"
 
 [dev-packages]
 ipykernel = "6.5.0"
