--- a/Pipfile
+++ b/Pipfile
@@ -4,18 +4,17 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-shapely = "==1.8.0"
 requests = "==2.26.0"
 pandas = "==1.3.5"
 psycopg2-binary = "==2.9.3"
 sqlalchemy = "==1.4.29"
-geoalchemy2 = "==0.10.0"
 click = "==8.0.3"
 tqdm = "==4.62.3"
 
 [dev-packages]
 ipykernel = "6.5.0"
 autopep8 = "==1.6.0"
+flake8 = "*"
 
 [requires]
 python_version = "3.8.10"
