feat: setup.py configured and argo deployment

--- a/k8s/workflows/fire_incidents.yaml
+++ b/k8s/workflows/fire_incidents.yaml
@@ -13,5 +13,5 @@ spec:
     templates:
       - name: run
         container:
-          image: "ghcr.io/dpinedaj/argodatawarehouse/worker:latest"
-          command: [ "argodw", "-s", "fire-incidents"]
+          image: "ghcr.io/dpinedaj/argodatawarehouse/worker:1.0"
+          command: [ "argodaniel", "--dataset", "fire_incidents"]
